Added People detail

--- a/Series/Series.xcodeproj/xcshareddata/xcschemes/Series-Test.xcscheme
+++ b/Series/Series.xcodeproj/xcshareddata/xcschemes/Series-Test.xcscheme
@@ -73,6 +73,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "Series"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
